# instead_of_me_store_backend

./: README.md  pyproject.toml
cart/: admin.py  models.py
cart/migrations/: 0001_initial.py  0002_alter_cart_options_cart_total_price_alter_cart_table.py  0003_rename_total_price_cart_price.py
common/: models.py
common/migrations/: 0001_initial.py
config/: authentication.py  settings.py  urls.py
config/config/: settings.py
products/: admin.py  models.py
products/migrations/: 0001_initial.py  0002_product_gender_alter_product_details_and_more.py  0003_product_detail.py  0004_remove_product_detail_product_size.py  0005_alter_product_gender_alter_product_size.py  0006_product_detail_image1_product_detail_image2_and_more.py  0007_alter_product_detail_image1_and_more.py
user/: models.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_phone_number.py  0003_alter_user_birth.py  0004_alter_user_phone_number.py  0005_alter_user_birth.py
